# sRAG

./: .gitignore  ChunkNode.py  CreateEmbeddings.py  DataGen.py  DocLoader.py  EmbeddingIndexing.py  NodeIndexing.py  PromptManager.py  README.md  coding_guidelines.md  embeddings.py  indexing.py  llm.py  pipeline.py  pyproject.toml  requirements.txt  test_example.py
.github/workflows/: publish.yml  python-package.yml
notebooks/: SimpleRAG.ipynb
srag/: __init__.py  chunk_node.py  data_generation.py  doc_loader.py  embeddings.py  llm.py  rag_pipeline.py  vector_store.py
src/zrag/: __init__.py  chunk_node.py  data_generation.py  doc_loader.py  embeddings.py  exceptions.py  llm.py  models.py  prompt_manager.py  rag_pipeline.py  vector_store.py
tests/: test_chunk_node.py  test_data_generation.py  test_doc_loader.py  test_embeddings.py  test_llm.py  test_prompt_manager.py  test_rag_pipeline.py  test_vector_store.py
